--- a/task/package.json
+++ b/task/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
