--- a/task/package.json
+++ b/task/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.3",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
